--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -78,11 +78,14 @@
 	</dependencies>
 
 	<build>
+	
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<source>21</source>
+                    <target>21</target>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
