--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=inventory-service
 
 #enabling connection to the db(database)
-spring.datasource.url=jdbc:postgresql://localhost:5432/inventory-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/inventory_service
 
 #providing admin credentials to perform db_transactions.
 spring.datasource.username=postgres
