--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=order-service
 
 #enabling connection to the db(database)
-spring.datasource.url=jdbc:postgresql://localhost:5432/order-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/order_service
 
 #providing admin credentials to perform db_transactions.
 spring.datasource.username=postgres
