--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=product-service
 
 #enabling connection to the db(database)
-spring.datasource.url=jdbc:postgresql://localhost:5432/product-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/product_service
 
 #providing admin credentials to perform db_transactions.
 spring.datasource.username=postgres
